--- a/room.html
+++ b/room.html
@@ -48,6 +48,33 @@
                      </footer>
                     </form>
                 </section>
+                <section id="questions">
+                    <h2 class="sr-only">Perguntas da comunidade</h2>
+                    <div class="questions">
+
+                        <div class="question-wrapper">
+                           <div class="question-content">
+                               <div class="user">
+                                   <img src="assets/avatar.svg" alt="Avatar">
+                               </div>
+                               <div class="question">
+                                   <p>Qual a diferença entre const, var e let no JavaScript</p>
+                               </div>
+                           </div>
+                            <div class="actions">
+                                <a href="#" class="check">
+                                    <img src="assets/check.svg" alt="Marcar como lida">
+                                    Marcar como lida
+                                </a>
+                                <a href="#" class="delete">
+                                    <img src="assets/trash.svg" alt="Excluir">
+                                    Excluir
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
             </main>
         </div> 
     </body>
